﻿zg 05.09.2014 01:51:10 +0200 - build 4087

1. проверка на повторное добавление окна в оконный менеджер.

zg 04.09.2014 23:56:47 +0200 - build 4086

1. уточнение 4083: некорректно работала f6 в редакторе/просмотре.

zg 04.09.2014 23:49:46 +0200 - build 4085

1. текущий редактор/просмотр определяются динамически.

zg 04.09.2014 12:52:38 +0200 - build 4084

1. все чисто модальные окна теперь должны наследоваться от класса Modal.

2. уточнение z-order для модальных окон.

3. опечатка.

zg 04.09.2014 04:07:18 +0200 - build 4083

1. немодальные окна имеют теперь z-order.

zg 03.09.2014 23:18:26 +0200 - build 4082

1. уточнение 4061.1.

drkns 03.09.2014 21:57:15 +0200 - build 4081

1. Пара мелочей.

shmuel 03.09.2014 16:14:57 +0200 - build 4080

1. Продолжение 4077.

shmuel 03.09.2014 12:14:17 +0200 - build 4079

1. Рефакторинг 4077.

drkns 03.09.2014 09:45:11 +0200 - build 4078

1. Уточнение 4076.

shmuel 03.09.2014 01:22:09 +0200 - build 4077

1. M#2705: Far.GetConfig (на замену Far.Cfg_Get).

drkns 03.09.2014 00:57:03 +0200 - build 4076

1. Выкинуты проверки на копирование выше корня. Теперь подобная ситуация считается копированием в корень. Как следствие:

2. 0002784: Падение при ручном вводе адреса сетевой папки для копирования.

3. Уточнения логики извлечения корня пути. Вроде бы уточнил везде, но возможны неожиданности.

drkns 02.09.2014 09:20:13 +0200 - build 4075

1. Уточнение 4072.1.

zg 01.09.2014 15:56:02 +0200 - build 4074

1. 0002786: Мёртвое зависание при закрытии Far Manager если не были закрыты все редактируемые файлы.

2. убран ненужный volatile.

drkns 31.08.2014 17:22:50 +0200 - build 4073

1. 0002785: Падение при попытке вызвать диалог создания архива (shift+F1)

2. Рефакторинг.

drkns 30.08.2014 20:27:40 +0200 - build 4072

1. Рефакторинг.

2. С форума: в строке-заголовке вьювера имя файла отображается без полного пути.

3. С форума: по Ctrl-Shift-Tab нельзя вернуться в конец списка.

4. Дерево папок неадекватно реагировано на клавишу F5.
