@@ -1,4 +1,8 @@
-﻿zg 05.09.2014 01:51:10 +0200 - build 4087
+﻿zg 05.09.2014 12:17:12 +0200 - build 4088
+
+1. уточнение 4083 для ACTL_GETWINDOWINFO.
+
+zg 05.09.2014 01:51:10 +0200 - build 4087
 
 1. проверка на повторное добавление окна в оконный менеджер.
 
